--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,10 +4,14 @@
         <param-name>javax.faces.PROJECT_STAGE</param-name>
         <param-value>Development</param-value>
     </context-param>
-    <context-param>  
-        <param-name>primefaces.THEME</param-name>  
-        <param-value>bootstrap</param-value>  
-    </context-param>    
+    <context-param>
+        <param-name>primefaces.THEME</param-name>
+        <param-value>bootstrap</param-value>
+    </context-param> 
+    <context-param>
+        <param-name>javax.faces.application.CONFIG_FILES</param-name>
+        <param-value>/WEB-INF/faces-config.xml</param-value>
+    </context-param>   
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
@@ -27,7 +31,7 @@
     </welcome-file-list>
     <filter>
         <filter-name>PrimeFaces FileUpload Filter</filter-name>
-         <filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class>
+        <filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class>
         <init-param>
             <param-name>thresholdSize</param-name>
             <param-value>51200</param-value>
@@ -38,14 +42,21 @@
             <param-value>/Users/temp</param-value>
         </init-param>
         -->
-    </filter>
+    </filter>    
     <filter-mapping>
         <filter-name>PrimeFaces FileUpload Filter</filter-name>
         <servlet-name>Faces Servlet</servlet-name>
+    </filter-mapping>
+    <filter>
+        <filter-name>LoginFilter</filter-name>
+        <filter-class>com.unalsoft.elitefle.presentation.filter.LoginFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>LoginFilter</filter-name>
+        <url-pattern>/sequence/*</url-pattern>
     </filter-mapping>
     <error-page>
         <exception-type>java.lang.Exception</exception-type>
         <location>/error.xhtml</location>
     </error-page>
-
 </web-app>
